--- a/templates/play.html
+++ b/templates/play.html
@@ -20,13 +20,18 @@
                 <!-- Title -->
                 <div class="index-title--container">
                     <div class="index-title--text">
-                        Disinformation
+                        <a href="{{ url_for('index') }}">
+                            Disinformation
+                        </a>
                     </div>
                 </div>
                 <!-- Links -->
                 <div class="index-links--container">
                     <div class="index-links--text">
-                        Play
+                        <a href="{{ url_for('play') }}">
+                            Play
+                        </a>
+                        
                     </div>
                     <div class="index-links--text">
                         About
