--- a/static/style.css
+++ b/static/style.css
@@ -24,8 +24,29 @@ body {
     background: linear-gradient(to bottom, #AAEBFF, #F6F9FC);
 }
 
+.underline:after {
+  display:block;
+  content: '';
+  border-bottom: solid 3px #000;  
+  transform: scaleX(0);  
+  transition: transform 250ms ease-in-out;
+  transform-origin:100% 50%
+}
+
+.underline:hover:after { 
+  transform: scaleX(1);
+  transform-origin:0 50%;
+}
+
+.underline {
+    position:relative;
+    display:inline-block;
+    cursor: pointer;
+    text-decoration:none;
+}
+
 a {
-    text-decoration: none;
+    text-decoration:none;
     cursor: pointer;
 }
 
