--- a/templates/play.html
+++ b/templates/play.html
@@ -27,13 +27,12 @@
                 </div>
                 <!-- Links -->
                 <div class="index-links--container">
-                    <div class="index-links--text">
+                    <div class="index-links--text underline">
                         <a href="{{ url_for('play') }}">
                             Play
                         </a>
-                        
                     </div>
-                    <div class="index-links--text">
+                    <div class="index-links--text underline">
                         About
                     </div>
                 </div>
