--- a/templates/about.html
+++ b/templates/about.html
@@ -13,8 +13,8 @@
 
 <body>
     <!-- Site -->
-    <div class="index-container">
-        <div class="index-container--top">
+    <div class="about-container">
+        <div class="about-container--top">
             <!-- Header -->
             <div class="index-header--container">
                 <!-- Title -->
@@ -40,34 +40,30 @@
                 </div>
             </div>
             <!-- Main -->
-            <div class="index-main--container">
-                <div class="index-center--container">
-                    <div class="index-center--title">
-                        Disinformation
+            <div class="about-main--container">
+                <div class="about-center--container">
+                    <div class="about-center--title">
+                        About this game
                     </div>
-                    <div class="index-center--subtitle">
-                        Test your ability to detect fake news headlines.
-                    </div>
-                    <div class="index-center--button-container">
-                        <a href="{{ url_for('play') }}">
-                            <div class="button--primary left index">
-                                Play
+                    <div class="about-card--container">
+                        <div class="about-card--section">
+                            <div class="about-card--text">
+                                This project explores disinformation's dangers in both generating false news headlines automatically and testing whether users can spot them. To play, click here.
                             </div>
-                        </a>
-                        <a href="{{ url_for('about') }}">
-                            <div class="button--primary right index">
-                                About
+                        </div>
+                        <div class="about-card--section">
+                            <div class="about-card--title">
+                                Motivation
                             </div>
-                        </a>
+                            <div class="about-card--text">
+                                This project explores disinformation's dangers in both generating false news headlines automatically and testing whether users can spot them. To play, click here.
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Bottom -->
-        <div class="index-container--bottom">
-            <object class="clipart left" data="{{ url_for('static',filename='trees.svg') }}" type="image/svg+xml"></object>
-            <object class="clipart right" data="{{ url_for('static',filename='park.svg') }}" type="image/svg+xml"></object>
-        </div>
+        
     </div>
 </body>
 
