new titling format for about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -48,15 +48,17 @@
                     <div class="about-card--container">
                         <div class="about-card--section">
                             <div class="about-card--text">
-                                This project explores disinformation's dangers in both generating false news headlines automatically and testing whether users can spot them. To play, click here.
+                                This project explores disinformation's dangers by both generating false news headlines automatically and testing whether users can spot them. Note that disinformation is intentionally-misleading information. Click here to play. 
                             </div>
                         </div>
                         <div class="about-card--section">
-                            <div class="about-card--title">
-                                Motivation
+                            <div class="about-card--title--container">
+                                <div class="about-card--title--text">
+                                    Motivation
+                                </div>
                             </div>
                             <div class="about-card--text">
-                                This project explores disinformation's dangers in both generating false news headlines automatically and testing whether users can spot them. To play, click here.
+                                Disinformation's presence online has ballooned in recent years, propating across the internet with potentially large and negative implications for societies around the world. Both domestic and foreign actors leverage some mix of automatic and manual computational methods to produce and deceive with the content.
                             </div>
                         </div>
                     </div>
