--- a/templates/index.html
+++ b/templates/index.html
@@ -65,8 +65,8 @@
         </div>
         <!-- Bottom -->
         <div class="index-container--bottom">
-            <object class="clipart left" data="{{ url_for('static',filename='trees.svg') }}" type="image/svg+xml"></object>
-            <object class="clipart right" data="{{ url_for('static',filename='park.svg') }}" type="image/svg+xml"></object>
+            <object class="clipart left" data="{{ url_for('static',filename='park.svg') }}" type="image/svg+xml"></object>
+            <object class="clipart right" data="{{ url_for('static',filename='trees.svg') }}" type="image/svg+xml"></object>
         </div>
     </div>
 </body>
