--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,15 @@
     --false-red--primary: #EA4A64;
     --false-red--secondary: #FCDFE3;
 }
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 5px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: rgba(0,0,0,.5);
+  -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
 html {
     height: 100vh;
 }
@@ -206,19 +215,32 @@ a {
     font-size: 72px;
 }
 .about-card--container {
-    margin: 0 0 0 0;
+    max-height: 20vh;
+    overflow-y: auto;
+    max-height: 400px;
+    margin: 20px 0 0 0;
     flex-grow: 1;
     border-radius: 5px;
     max-width: 500px;
 }
+.about-card--section:first-of-type {
+    margin: 0;
+}
 .about-card--section {
-    margin: 30px 0 0 0;
+    margin: 50px 0 0 0;
     display: flex;
     flex-direction: column;
 }
-.about-card--title {
+.about-card--title--container {
     margin: 0 0 10px 0;
+    display: flex;
+    flex-direction: row;
+}
+
+.about-card--title--text {
     font-weight: 900;
     font-size: 28px;
     font-variant: small-caps;
+    border-bottom: solid 5px rgba(0,195,151,0.75);
+    line-height: 15px;
 }
