--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,8 @@
 }
 ::-webkit-scrollbar {
   -webkit-appearance: none;
-  width: 5px;
+  width: 4px;
+
 }
 ::-webkit-scrollbar-thumb {
   border-radius: 5px;
@@ -221,7 +222,7 @@ a {
     margin: 20px 0 0 0;
     flex-grow: 1;
     border-radius: 5px;
-    max-width: 500px;
+    max-width: 600px;
 }
 .about-card--section:first-of-type {
     margin: 0;
@@ -235,6 +236,7 @@ a {
     margin: 0 0 10px 0;
     display: flex;
     flex-direction: row;
+    text-align: justify;
 }
 
 .about-card--title--text {
@@ -243,4 +245,6 @@ a {
     font-variant: small-caps;
     border-bottom: solid 5px rgba(0,195,151,0.75);
     line-height: 15px;
+    text-align: justify;
+
 }
