--- a/templates/about.html
+++ b/templates/about.html
@@ -43,22 +43,41 @@
             <div class="about-main--container">
                 <div class="about-center--container">
                     <div class="about-center--title">
-                        About this game
+                        About This Game
                     </div>
                     <div class="about-card--container">
                         <div class="about-card--section">
                             <div class="about-card--text">
-                                This project explores disinformation's dangers by both generating false news headlines automatically and testing whether users can spot them. Note that disinformation is intentionally-misleading information. Click here to play. 
+                                This project explores disinformation's dangers by both generating false news headlines automatically and testing whether users can spot them. Click here to play. 
                             </div>
                         </div>
                         <div class="about-card--section">
                             <div class="about-card--title--container">
                                 <div class="about-card--title--text">
-                                    Motivation
+                                    Motivation & Goals
                                 </div>
                             </div>
                             <div class="about-card--text">
-                                Disinformation's presence online has ballooned in recent years, propating across the internet with potentially large and negative implications for societies around the world. Both domestic and foreign actors leverage some mix of automatic and manual computational methods to produce and deceive with the content.
+                                Disinformation is intentionally-misleading information. While not new, its presence online has ballooned in recent years, with social media platforms propagating the content across their networks with large and negative impacts. Importantly, disinformation often mixes real and fake news to deceive. This characteristic makes it difficult to spot and plausible to generate automatically: actors can manipulate real news to create fake news, spinning reality effectively. It follows that this project's two goals are to: first, explore the process of generating disinformation automatically; and second, test whether individuals can spot it. In the process, this project critiques the uncertainty built into the era of social media news consumption, in which individuals look toward subjective and unfiltered sources for information. 
+                            </div>
+                        </div>
+                        <div class="about-card--section">
+                            <div class="about-card--title--container">
+                                <div class="about-card--title--text">
+                                    Computational Methods
+                                </div>
+                            </div>
+                            <div class="about-card--text">
+                                This project's code passes real headlines through heuristic algorithms to generate fake headlines. First, it loads thousands of Fox News headlines into memory. Second, it finds and records their named entities and noun chunks. Third, it generates new and fake headlines by selecting and manipulating real headlines randomly. For given headlines, it replaces portions of their text with random named entities and noun chunks recorded from other headlines. In doing so, it generates partly true or ideally believable but still false headlines. See the project's code and dependencies here.
+                            </div>
+                        </div>
+                        <div class="about-card--section">
+                            <div class="about-card--title--container">
+                                <div class="about-card--title--text">
+                                    References
+                                </div>
+                            </div>
+                            <div class="about-card--text">
                             </div>
                         </div>
                     </div>
