--- a/templates/about.html
+++ b/templates/about.html
@@ -68,7 +68,17 @@
                                 </div>
                             </div>
                             <div class="about-card--text">
-                                This project's code passes real headlines through heuristic algorithms to generate fake headlines. First, it loads thousands of Fox News headlines into memory. Second, it finds and records their named entities and noun chunks. Third, it generates new and fake headlines by selecting and manipulating real headlines randomly. For given headlines, it replaces portions of their text with random named entities and noun chunks recorded from other headlines. In doing so, it generates partly true or ideally believable but still false headlines. See the project's code and dependencies here.
+                                This project's code passes real headlines through heuristic algorithms to generate fake headlines. First, it loads thousands of Fox News headlines into memory. Second, it finds and records their named entities and noun chunks. Third, it generates fake headlines by selecting and manipulating the real headlines randomly. For random headlines, it replaces portions of their text with random named entities and noun chunks recorded from other headlines. In doing so, it generates partly true and ideally believable—but still false—headlines. With this data, this project tests whether users can spot which headlines are real or fake. See the project's code and dependencies here.
+                            </div>
+                        </div>
+                        <div class="about-card--section">
+                            <div class="about-card--title--container">
+                                <div class="about-card--title--text">
+                                    Critical Choices
+                                </div>
+                            </div>
+                            <div class="about-card--text">
+                                This project selected Fox News for its real headlines due partly to their face-value objectivity and partly to their content's similarity to headlines from the fake news ecosystem, which emits outrageous and often right-wing messages. Websites such as Breitbart News Network mirror Fox News' general tone and content, but subvert audiences by mixing false information into the mix. As such, Fox News helped to generate partly-real and partly-false content automatically, reflecting the types of news that Breitbart and similar sources deliver. In addition, this project's game scrubs the headlines of their original dates, authorship, and capitalization to standardize output. The goal here was to capture the reality of 
                             </div>
                         </div>
                         <div class="about-card--section">
