--- a/templates/play.html
+++ b/templates/play.html
@@ -35,7 +35,9 @@
                         </a>
                     </div>
                     <div class="index-links--text underline">
-                        About
+                        <a href="{{ url_for('about') }}">
+                            About
+                        </a>
                     </div>
                 </div>
             </div>
